--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web-cv",
   "version": "0.1.0",
   "private": true,
+  "author": "GravesHound",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -9,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "scrollreveal": "^4.0.9",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
